force-app/main/default/objects/coupon__c/coupon__c.object-meta.xml
<CustomObject>
    <label>coupon</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>coupon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>