force-app/main/default/objects/coupon__c/fields/aggregate_discount__c.field-meta.xml
<CustomField>
    <fullName>aggregate_discount__c</fullName>
    <formula>Discount__c * usable_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>