force-app/main/default/objects/coupon__c/fields/aggregate_used__c.field-meta.xml
<CustomField>
    <fullName>aggregate_used__c</fullName>
    <inlineHelpText>This is roll up value where TAD Order is using the coupon</inlineHelpText>
    <label>Order Aggregate Used</label>
    <summarizedField>Order_Coupon_POE__c.total_discounts__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Coupon_POE__c.Is_Migrated__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Coupon_POE__c.coupon__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>