force-app/main/default/objects/coupon__c/fields/balance_remaining__c.field-meta.xml
<CustomField>
    <fullName>balance_remaining__c</fullName>
    <formula>aggregate_discount__c - (aggregate_used__c + OLI_Aggregate_Used__c + EB_used__c + Order_aggregate_used__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>