force-app/main/default/objects/coupon__c/fields/BER_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>BER_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BER_Order Line Item</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>coupon</relationshipLabel>
    <relationshipName>coupon</relationshipName>
    <type>Lookup</type>
</CustomField>