force-app/main/default/objects/coupon__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unscheduled Event</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Gift Voucher</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Wholesale Incentive</fullName>
            </value>
            <value>
                <fullName>Change to deal</fullName>
            </value>
            <value>
                <fullName>Minimum Numbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>