force-app/main/default/objects/coupon__c/fields/Commission_Markup__c.field-meta.xml
<CustomField>
    <fullName>Commission_Markup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Markup</label>
    <type>Checkbox</type>
</CustomField>