force-app/main/default/objects/coupon__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>if(
    text(CurrencyIsoCode)  = &quot;AUD&quot;,
   &quot;Trip A Deal Pty Limited&quot;,
   &quot;TripADeal (NZ) Limited&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>