force-app/main/default/objects/coupon__c/fields/Convert_to_AUD__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_AUD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to AUD</label>
    <type>Checkbox</type>
</CustomField>