force-app/main/default/objects/coupon__c/fields/Coupon_code_sent_to_AP__c.field-meta.xml
<CustomField>
    <fullName>Coupon_code_sent_to_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coupon code sent to AP</label>
    <type>Checkbox</type>
</CustomField>