force-app/main/default/objects/coupon__c/fields/Coupon_Comms_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Comms_Date_Sent__c</fullName>
    <label>Coupon Comms Date Sent</label>
    <type>Date</type>
</CustomField>