force-app/main/default/objects/coupon__c/fields/Coupon_Dep_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Dep_Date__c</fullName>
    <inlineHelpText>This is the last Dep date on the Deal that this coupon can be used for</inlineHelpText>
    <label>Coupon Dep Date</label>
    <type>Date</type>
</CustomField>