force-app/main/default/objects/coupon__c/fields/Coupon_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Restrictions__c</fullName>
    <label>Coupon Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>