force-app/main/default/objects/coupon__c/fields/Coupon_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Text_Field__c</fullName>
    <label>Coupon Text Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>