force-app/main/default/objects/coupon__c/fields/Coupon_type__c.field-meta.xml
<CustomField>
    <fullName>Coupon_type__c</fullName>
    <label>Coupon Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unscheduled Event</fullName>
            </value>
            <value>
                <fullName>Customer Compensation</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Gift Coupon</fullName>
            </value>
            <value>
                <fullName>Promotion / Competition</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Wholesale Incentive</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Gift Voucher</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Change to deal</fullName>
            </value>
            <value>
                <fullName>Minimum Numbers</fullName>
            </value>
            <value>
                <fullName>Customer Offload</fullName>
            </value>
            <value>
                <fullName>Partner Discount</fullName>
            </value>
            <value>
                <fullName>Forfeit Flights</fullName>
            </value>
            <value>
                <fullName>BER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>