force-app/main/default/objects/coupon__c/fields/created_date__c.field-meta.xml
<CustomField>
    <fullName>created_date__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate)))+&quot;/&quot; +TEXT(MONTH(DATEVALUE(CreatedDate)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Text</type>
</CustomField>