force-app/main/default/objects/coupon__c/fields/CVC_from_original_order__c.field-meta.xml
<CustomField>
    <fullName>CVC_from_original_order__c</fullName>
    <formula>TEXT(OriginalOrder__r.CVC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVC from original order</label>
    <type>Text</type>
</CustomField>