force-app/main/default/objects/coupon__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>coupon</relationshipLabel>
    <relationshipName>coupon</relationshipName>
    <type>Lookup</type>
</CustomField>