force-app/main/default/objects/coupon__c/fields/Deal_from_Survey__c.field-meta.xml
<CustomField>
    <fullName>Deal_from_Survey__c</fullName>
    <label>Deal from Survey</label>
    <length>10</length>
    <type>Text</type>
</CustomField>