force-app/main/default/objects/coupon__c/fields/Deal_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Deal_Promotion__c</fullName>
    <description>Used in validation of coupons for deal promotions.</description>
    <inlineHelpText>Select which sales channel this promotion is valid for.</inlineHelpText>
    <label>Deal Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAD</fullName>
            </value>
            <value>
                <fullName>NRMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>