force-app/main/default/objects/coupon__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description(Whats it for?)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>