force-app/main/default/objects/coupon__c/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <label>Discount Applied</label>
    <summarizedField>Order_Coupon_POE__c.total_discounts__c</summarizedField>
    <summaryForeignKey>Order_Coupon_POE__c.coupon__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>