force-app/main/default/objects/coupon__c/fields/EB_used__c.field-meta.xml
<CustomField>
    <fullName>EB_used__c</fullName>
    <description>Total amount used on all order coupons</description>
    <label>EB Used</label>
    <summarizedField>EB_Coupon__c.total_discounts__c</summarizedField>
    <summaryForeignKey>EB_Coupon__c.coupon__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>