force-app/main/default/objects/coupon__c/fields/Feefo_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Feefo_Coupon__c</fullName>
    <formula>Right(Id,6)+account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feefo Coupon</label>
    <type>Text</type>
</CustomField>