force-app/main/default/objects/coupon__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>CASE(Coupon_type__c , 
&apos;Unscheduled Event&apos;, &apos;Cancellation or Customer Experience&apos;, 
&apos;Customer Compensation&apos; , &apos;Cancellation or Customer Experience&apos;,
&apos;Change to deal&apos;  , &apos;Cancellation or Customer Experience&apos;,
&apos;Minimum Numbers&apos; , &apos;Cancellation or Customer Experience&apos;,
&apos;Gift Voucher&apos; , &apos;Marketing with Consideration&apos;,
&apos;Gift Coupon&apos;, &apos;Marketing with Consideration&apos;,
&apos;Promotion&apos;, &apos;Marketing without Consideration&apos;,
&apos;Promotion / Competition&apos; , &apos;Marketing without Consideration&apos;,
&apos;Loyalty&apos;, &apos;Marketing without Consideration&apos;,
&apos;Complaint&apos; , &apos;Customer Experience&apos;,
&apos;Staff&apos; , &apos;Staff&apos; ,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>