force-app/main/default/objects/coupon__c/fields/Hamper_Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Hamper_Voucher_Code__c</fullName>
    <formula>Right(Id,6)+ left(Name__c,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hamper Voucher Code</label>
    <type>Text</type>
</CustomField>