force-app/main/default/objects/coupon__c/fields/Hampers__c.field-meta.xml
<CustomField>
    <fullName>Hampers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hampers</label>
    <type>Checkbox</type>
</CustomField>