force-app/main/default/objects/coupon__c/fields/Is_Agent_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_Coupon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent Coupon</label>
    <type>Checkbox</type>
</CustomField>