force-app/main/default/objects/coupon__c/fields/Is_From_Feefo__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Feefo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This coupon was created when the customer filled in a survey</description>
    <label>Is From Feefo</label>
    <type>Checkbox</type>
</CustomField>