force-app/main/default/objects/coupon__c/fields/Is_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_Override__c</fullName>
    <formula>IF(  Is_Agent_Coupon__c =true, true, false)</formula>
    <label>Is Override?</label>
    <type>Checkbox</type>
</CustomField>