force-app/main/default/objects/coupon__c/fields/Is_percentage_based__c.field-meta.xml
<CustomField>
    <fullName>Is_percentage_based__c</fullName>
    <formula>IF(Discount_percentage__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is % based</label>
    <type>Checkbox</type>
</CustomField>