force-app/main/default/objects/coupon__c/fields/Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Loyalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty</label>
    <type>Checkbox</type>
</CustomField>