force-app/main/default/objects/coupon__c/fields/Min_order_value__c.field-meta.xml
<CustomField>
    <fullName>Min_order_value__c</fullName>
    <label>Min order value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>