force-app/main/default/objects/coupon__c/fields/Multi_deal_restriction__c.field-meta.xml
<CustomField>
    <fullName>Multi_deal_restriction__c</fullName>
    <inlineHelpText>Data entered will be seperated by &apos;;&apos; ie- 2344;4534;5676</inlineHelpText>
    <label>Multi deal restriction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>