force-app/main/default/objects/coupon__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Coupon Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>