force-app/main/default/objects/coupon__c/fields/NC500__c.field-meta.xml
<CustomField>
    <fullName>NC500__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NC500</label>
    <type>Checkbox</type>
</CustomField>