force-app/main/default/objects/coupon__c/fields/NewOrder__c.field-meta.xml
<CustomField>
    <fullName>NewOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NewOrder</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>coupon (NewOrder)</relationshipLabel>
    <relationshipName>NewOrder</relationshipName>
    <type>Lookup</type>
</CustomField>