force-app/main/default/objects/coupon__c/fields/NZD_Conversion_Amount__c.field-meta.xml
<CustomField>
    <fullName>NZD_Conversion_Amount__c</fullName>
    <formula>balance_remaining__c /1.115</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NZD Conversion Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>