force-app/main/default/objects/coupon__c/fields/OLI_Aggregate_Used__c.field-meta.xml
<CustomField>
    <fullName>OLI_Aggregate_Used__c</fullName>
    <label>OLI Aggregate Used</label>
    <summarizedField>OrderLineCoupon__c.Discount_Amount_del__c</summarizedField>
    <summaryForeignKey>OrderLineCoupon__c.Line_Coupon__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>