force-app/main/default/objects/coupon__c/fields/Order_aggregate_used__c.field-meta.xml
<CustomField>
    <fullName>Order_aggregate_used__c</fullName>
    <inlineHelpText>This is roll up value where old (legacy) Order is using the coupon</inlineHelpText>
    <label>Order aggregate used</label>
    <summarizedField>Order_Coupon__c.total_discounts__c</summarizedField>
    <summaryForeignKey>Order_Coupon__c.coupon__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>