force-app/main/default/objects/coupon__c/fields/ordexp_CancellationRefund__c.field-meta.xml
<CustomField>
    <fullName>ordexp_CancellationRefund__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cancellation/Refund</label>
    <referenceTo>Cancellation_Refund_POE__c</referenceTo>
    <relationshipLabel>coupon</relationshipLabel>
    <relationshipName>coupon</relationshipName>
    <type>Lookup</type>
</CustomField>