force-app/main/default/objects/coupon__c/fields/OriginalOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OriginalOrder</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>coupon(Original)</relationshipLabel>
    <relationshipName>coupon</relationshipName>
    <type>Lookup</type>
</CustomField>