force-app/main/default/objects/coupon__c/fields/OriginalOrderPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderPhoneNumber__c</fullName>
    <formula>OriginalOrder__r.Account_phone_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OriginalOrderPhoneNumber</label>
    <type>Text</type>
</CustomField>