force-app/main/default/objects/coupon__c/fields/OriginalOrderRecordType__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderRecordType__c</fullName>
    <formula>OriginalOrder__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OriginalOrderRecordType</label>
    <type>Text</type>
</CustomField>