force-app/main/default/objects/coupon__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Applicable if a Payment Transaction is being transferred to this coupon.</inlineHelpText>
    <label>Payment Transaction</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Payment Transaction does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Payment_Transaction__c.transaction_type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>coupon</relationshipLabel>
    <relationshipName>coupon</relationshipName>
    <type>Lookup</type>
</CustomField>