force-app/main/default/objects/coupon__c/fields/Phone_Only__c.field-meta.xml
<CustomField>
    <fullName>Phone_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Only</label>
    <type>Checkbox</type>
</CustomField>