force-app/main/default/objects/coupon__c/fields/Send__c.field-meta.xml
<CustomField>
    <fullName>Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the Send Coupon button on Cancellation component is clicked, this checkbox goes to true.</description>
    <label>Send Coupon</label>
    <type>Checkbox</type>
</CustomField>