force-app/main/default/objects/coupon__c/fields/Send_Coupon_Comms__c.field-meta.xml
<CustomField>
    <fullName>Send_Coupon_Comms__c</fullName>
    <label>Send Coupon Comms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expiry Date only</fullName>
            </value>
            <value>
                <fullName>Book By &amp; Travel By</fullName>
            </value>
            <value>
                <fullName>Sent - Expiry Date only</fullName>
            </value>
            <value>
                <fullName>Sent - Book By &amp; Travel By</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>