force-app/main/default/objects/coupon__c/fields/Site_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Site_from_Account__c</fullName>
    <formula>TEXT(account__r.site__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site from Account</label>
    <type>Text</type>
</CustomField>