force-app/main/default/objects/coupon__c/fields/Special_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Special_Coupon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Coupon</label>
    <type>Checkbox</type>
</CustomField>