force-app/main/default/objects/coupon__c/fields/Special_Coupon_Text__c.field-meta.xml
<CustomField>
    <fullName>Special_Coupon_Text__c</fullName>
    <label>Special Coupon Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>