force-app/main/default/objects/coupon__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>