force-app/main/default/objects/coupon__c/fields/transferrable_amount__c.field-meta.xml
<CustomField>
    <fullName>transferrable_amount__c</fullName>
    <formula>Payment_Transaction__r.amount_original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the amount available to be transferred from the linked Payment Transaction</inlineHelpText>
    <label>Transferable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>