force-app/main/default/objects/coupon__c/fields/Travel_type__c.field-meta.xml
<CustomField>
    <fullName>Travel_type__c</fullName>
    <label>Travel type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Stay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>