force-app/main/default/objects/coupon__c/fields/usable_count__c.field-meta.xml
<CustomField>
    <fullName>usable_count__c</fullName>
    <label>Usable Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>