force-app/main/default/objects/coupon__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <inlineHelpText>Single : Single use no balance | Balance : Single user but can be used incrementally | Multi : Multiple users can use the one coupon code</inlineHelpText>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>