force-app/main/default/objects/coupon__c/fields/usage_count__c.field-meta.xml
<CustomField>
    <fullName>usage_count__c</fullName>
    <inlineHelpText>This is usage count for new TAD Orders</inlineHelpText>
    <label>Usage Count</label>
    <summaryFilterItems>
        <field>Order_Coupon_POE__c.ff_Coupon_Type__c</field>
        <operation>notEqual</operation>
        <value>Cancellation</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Coupon_POE__c.coupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>