force-app/main/default/objects/coupon__c/fields/Usage_Count_Old__c.field-meta.xml
<CustomField>
    <fullName>Usage_Count_Old__c</fullName>
    <inlineHelpText>This is usage count related to old Orders</inlineHelpText>
    <label>Usage Count (Old)</label>
    <summaryForeignKey>Order_Coupon__c.coupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>