force-app/main/default/objects/coupon__c/fields/Withheld_Amount__c.field-meta.xml
<CustomField>
    <fullName>Withheld_Amount__c</fullName>
    <formula>ordexp_CancellationRefund__r.Coupon_Withheld_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withheld Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>