force-app/main/default/objects/coupon__c/validationRules/Balance_coupon_not_single.validationRule-meta.xml
<ValidationRule>
    <fullName>Balance_coupon_not_single</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Usage__c) = &quot;Balance&quot;, usable_count__c &lt;&gt; 1)</errorConditionFormula>
    <errorDisplayField>usable_count__c</errorDisplayField>
    <errorMessage>Coupons for &quot;Usage&quot; of  &quot;Balance&quot; must have a &quot;Usable Count&quot; of &quot;1&quot;.</errorMessage>
</ValidationRule>