force-app/main/default/objects/coupon__c/validationRules/Discount_Percentage_can_not_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Percentage_can_not_be_negative</fullName>
    <active>true</active>
    <description>PSAG-255</description>
    <errorConditionFormula>Discount_percentage__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Discount_percentage__c</errorDisplayField>
    <errorMessage>Percentage should not be in -ve and should always be positive.</errorMessage>
</ValidationRule>