force-app/main/default/objects/coupon__c/validationRules/One_Useable_Coupon_Transferred_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Useable_Coupon_Transferred_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Payment_Transaction__c)),OR(usable_count__c &gt; 1,Discount__c &gt; transferrable_amount__c))</errorConditionFormula>
    <errorMessage>You can only have a usable count of 1 for a transferred payment and the Discount must be the same or less than the value of the transferred payment.</errorMessage>
</ValidationRule>