force-app/main/default/objects/coupon__c/listViews/Created_by_Cass.listView-meta.xml
<ListView>
    <fullName>Created_by_Cass</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Discount__c</columns>
    <columns>usable_count__c</columns>
    <columns>usage_count__c</columns>
    <columns>aggregate_discount__c</columns>
    <columns>Usage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>cassandra</value>
    </filters>
    <label>Created by Cass</label>
    <sharedTo>
        <group>Marketing</group>
    </sharedTo>
</ListView>