force-app/main/default/objects/coupon__c/listViews/Created_TODAY.listView-meta.xml
<ListView>
    <fullName>Created_TODAY</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>account__c</columns>
    <columns>Lead__c</columns>
    <columns>Site_from_Account__c</columns>
    <columns>Name__c</columns>
    <columns>Account_Email__c</columns>
    <columns>Usage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Discount__c</columns>
    <columns>aggregate_discount__c</columns>
    <columns>aggregate_used__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created TODAY</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>